# Kage-no-Kata-Shortanimation

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/models/: samurai.glb
assets/source_blender/: sword.blend
assets/source_blender/katana/: sword.blend
assets/source_blender/samurai_rig/: samurai.blend
assets/source_blender/sword/materials/denim_fabric_06_1k.blend/: denim_fabric_06_1k.blend
assets/source_blender/sword/materials/rock_embedded_concrete_1k.blend/: rock_embedded_concrete_1k.blend
assets/source_blender/sword/materials/rock_embedded_concrete_1k.blend/textures/: rock_embedded_concrete_nor_gl_1k.exr  rock_embedded_concrete_rough_1k.exr
assets/source_blender/torii_gate/: torii_gate.blend
cmake/: PatchGltemplate.cmake
cmake/patches/: gltemplate-v1.7b.patch
docs/: ARCHITECTURE.md  ASSET_PIPELINE.md  CODE_STYLE.md  CONCEPT.md  DEVELOPMENT_LOG.md  EDITOR_WORKFLOW.md  FRAMEWORK_BOUNDARY.md  INPUT_DECISION.md  PLATFORM_INDEPENDENCE.md  PROJECT_REQUIREMENTS.md  TECHNICAL_PLAN.md  TODO.md
projects/: kage_no_kata_world.kage.json
src/: main.cpp
src/animation/: animator.cpp  animator.hpp
src/app/: main_app.cpp  main_app.hpp
src/assets/: asset_registry.cpp  asset_registry.hpp  asset_types.hpp  gltf_asset_loader.cpp  gltf_asset_loader.hpp  model_validation.cpp  model_validation.hpp
src/camera/: camera.cpp  camera.hpp  camera_system.cpp  camera_system.hpp  fly_camera_controller.cpp  fly_camera_controller.hpp
src/editor/: editor_ui.cpp  editor_ui.hpp  gizmo_controller.cpp  gizmo_controller.hpp  placement_controller.cpp  placement_controller.hpp  selection_controller.cpp  selection_controller.hpp  world_editor.cpp  world_editor.hpp
src/engine/: editor_camera_bridge.cpp  editor_camera_bridge.hpp  engine_core.cpp  engine_core.hpp  project_serializer.cpp  project_serializer.hpp
src/input/: input_events.hpp
src/lighting/: light.hpp  lighting_system.cpp  lighting_system.hpp
src/math/: bounds.hpp  screen_projection.hpp  transform.hpp
src/platform/: runtime_paths.cpp  runtime_paths.hpp
src/render/: gpu_buffer.cpp  gpu_buffer.hpp  gpu_mesh.cpp  gpu_mesh.hpp  line_renderer.cpp  line_renderer.hpp  mesh_resource_cache.cpp  mesh_resource_cache.hpp  shader_program.cpp  shader_program.hpp  solid_gizmo_renderer.cpp  solid_gizmo_renderer.hpp  static_mesh_renderer.cpp  static_mesh_renderer.hpp  texture_2d.cpp  texture_2d.hpp  vertex_array.cpp  vertex_array.hpp  world_renderer.cpp  world_renderer.hpp
src/scene/: components.hpp  entity_id.hpp  scene_manager.cpp  scene_manager.hpp  world.cpp  world.hpp
tests/: asset_import_check.cpp
